--- a/serialize-closures/package.json
+++ b/serialize-closures/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serialize-closures",
+  "name": "@tw/serialize-closures",
   "version": "0.2.7",
   "description": "Serializes closures processed by the ts-closure-transform package.",
   "main": "dist/src/index.js",
