--- a/serialize-closures/package.json
+++ b/serialize-closures/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tw/serialize-closures",
+  "name": "@triplewhale/serialize-closures",
   "version": "0.2.7",
   "description": "Serializes closures processed by the ts-closure-transform package.",
   "main": "dist/src/index.js",
@@ -40,5 +40,8 @@
     "mocha": "^10.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
